Love-Work [images done]

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     </head>
     <body>
         <nav>
-            <a href="#home-section">Home</a>
-            <a href="#letter-section">Letter</a>
-            <a href="#photos-section">Photos</a>
+            <a href="#home-section" id="link0">Home</a>
+            <a href="#letter-section" id="link1">Letter</a>
+            <a href="#photos-section" id="link2">Photos</a>
         </nav>
 
         <div id="container">
             <div id="home-section" class="overlay">
                 <p id="home-text"><q>Happy New Year, Miss Ankita Tomar <br> and a very happy welcome to 2023.</q></p>
             </div>
-            <div id="letter-section" class="overlay"></div>
-            <div id="photos-section" class="overlay"></div>
+            <div id="letter-section" class="overlay hidden-item">
+                Hello, World!
+            </div>
+            <div id="photos-section" class="overlay hidden-item">
+            </div>
             <canvas id="canvas">Canvas is not supported in your browser.</canvas>
         </div>
 
